cmake_minimum_required(VERSION 3.28)
project(code C)

set(CMAKE_C_STANDARD 11)

add_executable(main1
        main1.c
)

add_executable(main2
        main2.c
)

add_executable(main3
        main3.c
)

add_executable(main4
        main4.c)

add_executable(main5
        main5.c)

add_executable(intervalTree
        intervalTree.c)

add_executable(main6
        main6.c)

add_executable(main7
        main7.c)

add_executable(main8
        main8.c)

add_executable(main9
        main9.c)

add_executable(main10
        main10.c)

add_executable(main11
        main11.c)

add_executable(main12
        main12.c)

add_executable(main13
        main13.c)

add_executable(main14
        main14.c)

add_executable(main15
        main15.c)

add_executable(main16
        main16.c)

add_executable(main17
        main17.c)

add_executable(main18
        main18.c)

add_executable(main19
        main19.c)

add_executable(main20
        main20.c)